Topic 6294 - Issue reporter: List of recently submitted issues has a horizontal scrollbar with some themes

--- a/chrome/skin/sendReport.css
+++ b/chrome/skin/sendReport.css
@@ -65,7 +65,8 @@ radio, checkbox, .topLabel, #dataDeck
 
 #recentReportsList
 {
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 #issuesBox
